<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_fab_del"
        android:layout_toLeftOf="@+id/fab_del"
        android:layout_toStartOf="@+id/fab_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/textLabelFabDel"
        android:textSize="@dimen/textDefaultSize"
        android:visibility="invisible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_del"
        android:src="@drawable/ic_delete_black_24dp"
        android:backgroundTint="@color/greyButtons"
        android:foregroundTint="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/fab_small_sides_margin"
        android:layout_marginEnd="@dimen/fab_small_sides_margin"
        android:layout_marginBottom="@dimen/fab_margin_5"
        android:visibility="invisible"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"/>

    <TextView
        android:id="@+id/label_fab_save"
        android:layout_toLeftOf="@+id/fab_del"
        android:layout_toStartOf="@+id/fab_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/textLabelFabDel"
        android:textSize="@dimen/textDefaultSize"
        android:visibility="invisible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:src="@drawable/ic_save_black_24dp"
        android:backgroundTint="@color/greyButtons"
        android:foregroundTint="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/fab_small_sides_margin"
        android:layout_marginEnd="@dimen/fab_small_sides_margin"
        android:layout_marginBottom="@dimen/fab_margin_4"
        android:visibility="invisible"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"/>

    <TextView
        android:id="@+id/label_fab_clone"
        android:layout_toLeftOf="@+id/fab_clone"
        android:layout_toStartOf="@+id/fab_clone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/textLabelFabClone"
        android:textSize="@dimen/textDefaultSize"
        android:visibility="invisible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_clone"
        android:src="@drawable/ic_content_copy_black_24dp"
        android:backgroundTint="@color/greyButtons"
        android:foregroundTint="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/fab_small_sides_margin"
        android:layout_marginEnd="@dimen/fab_small_sides_margin"
        android:layout_marginBottom="@dimen/fab_margin_3"
        android:visibility="invisible"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"/>

    <TextView
        android:id="@+id/label_fab_add"
        android:layout_toLeftOf="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/textLabelFabAdd"
        android:textSize="@dimen/textDefaultSize"
        android:layout_toStartOf="@+id/fab_add"
        android:visibility="invisible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:src="@drawable/ic_add_black_24dp"
        android:backgroundTint="@color/greyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/fab_small_sides_margin"
        android:layout_marginRight="@dimen/fab_small_sides_margin"
        android:layout_marginBottom="@dimen/fab_margin_2"
        android:visibility="invisible"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_gravity="bottom|end"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_menu"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@color/white"
        android:layout_width="@dimen/fabDimen"
        android:layout_height="@dimen/fabDimen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        app:fabSize="normal" />

</RelativeLayout>