<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marcosevaristo.trackusadmin.activities.CadastroMunicipioActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            layout="@layout/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/toolbar_inc"/>
    </android.support.design.widget.AppBarLayout>

    <!-- START NOME -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textLayoutMunicipioNome"
        android:padding="@dimen/fieldDefaultPadding"
        android:layout_marginTop="@dimen/marginTopComAppBar">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etMunicipioHint"
            android:id="@+id/etNomeMunicipio"/>

    </android.support.design.widget.TextInputLayout>
    <!-- END NOME -->

    <!-- START FAB -->
    <RelativeLayout
        android:id="@+id/fab_list_linhas_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_layout_height"
        android:layout_above="@id/fab_del_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelFabListLinhas"
            android:text="@string/textLabelFabLinhasMunicipio"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/fab_label_sides_margin"
            android:layout_marginEnd="@dimen/fab_label_sides_margin"
            android:padding="@dimen/fabLabelDefaultPadding"
            android:background="@drawable/rectangle"
            android:visibility="invisible"
            android:textSize="@dimen/textSmall"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_linhas_municipio"
            android:src="@drawable/ic_list_black_24dp"
            android:backgroundTint="@color/greyButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/fab_small_sides_margin"
            android:layout_marginEnd="@dimen/fab_small_sides_margin"
            android:visibility="invisible"
            app:elevation="@dimen/fab_elevation"
            app:pressedTranslationZ="12dp"
            app:borderWidth="0dp"
            app:fabSize="mini"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fab_del_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_layout_height"
        android:layout_above="@id/fab_save_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelFabDel"
            android:text="@string/textLabelFabDel"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/fab_label_sides_margin"
            android:layout_marginEnd="@dimen/fab_label_sides_margin"
            android:padding="@dimen/fabLabelDefaultPadding"
            android:background="@drawable/rectangle"
            android:visibility="invisible"
            android:textSize="@dimen/textSmall"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_del"
            android:src="@drawable/ic_delete_black_24dp"
            android:backgroundTint="@color/redButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/fab_small_sides_margin"
            android:layout_marginEnd="@dimen/fab_small_sides_margin"
            android:visibility="invisible"
            app:elevation="@dimen/fab_elevation"
            app:pressedTranslationZ="12dp"
            app:borderWidth="0dp"
            app:fabSize="mini"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fab_save_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_layout_height"
        android:layout_above="@id/fab_add_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelFabSave"
            android:text="@string/textLabelFabSave"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/fab_label_sides_margin"
            android:layout_marginEnd="@dimen/fab_label_sides_margin"
            android:padding="@dimen/fabLabelDefaultPadding"
            android:background="@drawable/rectangle"
            android:visibility="invisible"
            android:textSize="@dimen/textSmall"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_save"
            android:src="@drawable/ic_save_black_24dp"
            android:backgroundTint="@color/greyButtons"
            app:borderWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/fab_small_sides_margin"
            android:layout_marginEnd="@dimen/fab_small_sides_margin"
            android:visibility="invisible"
            app:elevation="@dimen/fab_elevation"
            app:pressedTranslationZ="12dp"
            app:fabSize="mini"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fab_add_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_layout_height"
        android:layout_above="@id/fab_menu_layout"
        android:layout_marginBottom="@dimen/fab_layout_first_margin_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelFabAdd"
            android:text="@string/textLabelFabAdd"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/fab_label_sides_margin"
            android:layout_marginEnd="@dimen/fab_label_sides_margin"
            android:padding="@dimen/fabLabelDefaultPadding"
            android:background="@drawable/rectangle"
            android:visibility="invisible"
            android:textSize="@dimen/textSmall"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add"
            android:src="@drawable/ic_add_black_24dp"
            android:backgroundTint="@color/greyButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/fab_small_sides_margin"
            android:layout_marginRight="@dimen/fab_small_sides_margin"
            android:visibility="invisible"
            app:elevation="@dimen/fab_elevation"
            app:pressedTranslationZ="12dp"
            app:borderWidth="0dp"
            app:fabSize="mini"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fab_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_menu_layout_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/fab_margin">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_menu"
            android:src="@drawable/ic_add_black_24dp"
            android:tint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            app:elevation="@dimen/fab_elevation"
            app:borderWidth="0dp"
            app:fabSize="normal" />
    </RelativeLayout>
    <!-- END FAB -->
</RelativeLayout>
